--- a/src/components/styles/skills/skills.scss
+++ b/src/components/styles/skills/skills.scss
@@ -6,7 +6,7 @@ $text-color: #fff;
 #skills {
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 
-  background: url("../../../assets/img/image 1.png") no-repeat center/cover;
+  background: url("../../../assets/img/White_Background_generated.jpg") no-repeat center/cover;
   width: 100%;
   height: 100%;
   overflow: hidden;
