--- a/src/components/styles/header/header.scss
+++ b/src/components/styles/header/header.scss
@@ -1,28 +1,30 @@
 #header {
-  //position: fixed;
-  //width: 1550px;
   width: 100%;
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&family=Roboto:ital,wght@0,500;1,400;1,500&family=Source+Code+Pro:wght@300&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&family=Roboto:ital,wght@0,500;1,400;1,500&family=Ropa+Sans&family=Source+Code+Pro:wght@300&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@800&family=Roboto:ital,wght@0,500;1,400;1,500&family=Ropa+Sans:ital@1&family=Source+Code+Pro:wght@300&display=swap');
   @import url('https://fonts.googleapis.com/css2?family=Gluten:wght@500&display=swap');
+
   a {
     text-decoration: none;
   }
 
-  background: black;
+  background: white;
   height: 80px;
+
   .header {
     display: flex;
     justify-content: center;
     align-items: center;
+
     &-logo {
       font-family: 'Gluten', cursive;
       font-style: italic;
       font-size: 34px;
-      color: #FFFFFF;
+      color: #000000;
       font-weight: bolder;
     }
+
     &-nav {
       &-item {
         margin: 0 30px;
@@ -35,20 +37,6 @@
 
       &-item:hover {
         color: red;
-      }
-    }
-
-    &-moon {
-      width: 45px;
-      background: #FFFFFF;
-      border-radius: 10px;
-      height: 40px;
-      border: 2px solid white;
-      transition: .4s;
-      margin-left: 90px;
-      &-icon {
-        width: 25px;
-        height: 20px;
       }
     }
   }
