--- a/src/components/styles/styles.scss
+++ b/src/components/styles/styles.scss
@@ -1,6 +1,6 @@
 @import "./../styles/header/header";
 @import "./../styles/home/home";
 @import "./../styles/about/about";
-@import "./../styles/contacts/contacts";
+@import "./../styles/footer/footer";
 @import "./../styles/skills/skills";
 @import "./../styles/media/media";
